# wallp

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  build_log.txt  release.sh  warnings.txt  warnings_final.txt  warnings_verified.txt
.github/workflows/: ci.yml  release.yml
docs/: prd.md
scripts/: build_linux.sh  build_macos.sh  build_windows.sh  setup-hooks.sh  verify.sh
src/: cli.rs  config.rs  lib.rs  logging.rs  main.rs  manager.rs  scheduler.rs  tray.rs  unsplash.rs
tests/: cli_repro.rs  cli_tests.rs  integration_tests.rs  logic_repro.rs  tray_tests.rs
wix/: License.rtf  main.wxs
