[package]
name = "wallp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
auto-launch = "0.6.0"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.57", features = ["derive"] }
dialoguer = "0.12.0"
directories = "6.0.0"
open = "5.3.3"
reqwest = { version = "0.13.1", features = ["json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
single-instance = "0.3.3"
tao = "0.34.5"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = "0.3.22"
tray-icon = "0.21.3"
wallpaper = "3.2.0"

[build-dependencies]
winres = "0.1.12"
