[package]
name = "wallp"
version = "1.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
auto-launch = "0.6.0"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.57", features = ["derive"] }
dialoguer = "0.12.0"
directories = "6.0.0"
image = "0.25"
open = "5.3.3"
reqwest = { version = "0.13.1", features = ["json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
single-instance = "0.3.3"
tao = "0.34.5"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = "0.3.22"
tray-icon = "0.21.3"
wallpaper = "3.2.0"
which = "7"
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_System_Console", "Win32_UI_WindowsAndMessaging", "Win32_Foundation", "UI_Notifications", "Data_Xml_Dom"] }
winreg = "0.55.0"
notify-rust = "4.11.3"

[target.'cfg(not(windows))'.dependencies]
notify-rust = "4.11.3"

[features]
tray = []
default = ["tray"]

[build-dependencies]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[dev-dependencies]
assert_cmd = "2.0.16"
tempfile = "3.16.0"
predicates = "3.1.3"
